--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@ var dtcIE = LorSTN.ieo.detector; LorSTN.ieo.classer(dtcIE);
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="12" href="http://sblig.club/u-12">
-													<img src="dist/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
+													<img src="dist/img/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
 												</a>
 											</p>
 											<p class="name">
@@ -691,7 +691,7 @@ var dtcIE = LorSTN.ieo.detector; LorSTN.ieo.classer(dtcIE);
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="10" href="http://sblig.club/u-10">
-													<img src="dist/10_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="bill">
+													<img src="dist/img/10_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="bill">
 												</a>
 											</p>
 											<p class="name">
@@ -734,7 +734,7 @@ var dtcIE = LorSTN.ieo.detector; LorSTN.ieo.classer(dtcIE);
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="10" href="http://sblig.club/u-10">
-													<img src="dist/10_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="bill">
+													<img src="dist/img/10_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="bill">
 												</a>
 											</p>
 											<p class="name">
@@ -777,7 +777,7 @@ var dtcIE = LorSTN.ieo.detector; LorSTN.ieo.classer(dtcIE);
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="12" href="http://sblig.club/u-12">
-													<img src="dist/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
+													<img src="dist/img/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
 												</a>
 											</p>
 											<p class="name">
@@ -822,7 +822,7 @@ var dtcIE = LorSTN.ieo.detector; LorSTN.ieo.classer(dtcIE);
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="12" href="http://sblig.club/u-12">
-													<img src="dist/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
+													<img src="dist/img/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
 												</a>
 											</p>
 											<p class="name">
@@ -921,7 +921,7 @@ var dtcIE = LorSTN.ieo.detector; LorSTN.ieo.classer(dtcIE);
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="10" href="http://sblig.club/u-10">
-													<img src="dist/10_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="bill">
+													<img src="dist/img/10_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="bill">
 												</a>
 											</p>
 											<p class="name">
@@ -968,7 +968,7 @@ var dtcIE = LorSTN.ieo.detector; LorSTN.ieo.classer(dtcIE);
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="12" href="http://sblig.club/u-12">
-													<img src="dist/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
+													<img src="dist/img/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
 												</a>
 											</p>
 											<p class="name">
@@ -1026,7 +1026,7 @@ Charlin出框架的目标：简单、…												</a>
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="10" href="http://sblig.club/u-10">
-													<img src="dist/10_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="bill">
+													<img src="dist/img/10_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="bill">
 												</a>
 											</p>
 											<p class="name">
@@ -1159,7 +1159,7 @@ Charlin出框架的目标：简单、…												</a>
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="12" href="http://sblig.club/u-12">
-													<img src="dist/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
+													<img src="dist/img/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
 												</a>
 											</p>
 											<p class="name">
@@ -1208,7 +1208,7 @@ Charlin出框架的目标：简单、…												</a>
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="12" href="http://sblig.club/u-12">
-													<img src="dist/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
+													<img src="dist/img/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
 												</a>
 											</p>
 											<p class="name">
@@ -1257,7 +1257,7 @@ Charlin出框架的目标：简单、…												</a>
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="12" href="http://sblig.club/u-12">
-													<img src="dist/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
+													<img src="dist/img/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
 												</a>
 											</p>
 											<p class="name">
@@ -1313,7 +1313,7 @@ AndroidApp版本更新提示库-AnAndroidAPPnewversionupdatelibrary.
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="12" href="http://sblig.club/u-12">
-													<img src="dist/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
+													<img src="dist/img/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
 												</a>
 											</p>
 											<p class="name">
@@ -1366,7 +1366,7 @@ AsyncHttpConnection
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="16" href="http://sblig.club/u-16">
-													<img src="dist/16_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="淡水鱼">
+													<img src="dist/img/16_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="淡水鱼">
 												</a>
 											</p>
 											<p class="name">
@@ -1417,7 +1417,7 @@ ZXingMiniZXing开源库的精简版
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="10" href="http://sblig.club/u-10">
-													<img src="dist/10_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="bill">
+													<img src="dist/img/10_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="bill">
 												</a>
 											</p>
 											<p class="name">
@@ -1461,7 +1461,7 @@ ZXingMiniZXing开源库的精简版
 																		<div class="author">
 											<p class="photo">
 												<a class="J_user_card_show" data-uid="12" href="http://sblig.club/u-12">
-													<img src="dist/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
+													<img src="dist/img/12_small.jpg" onerror="this.onerror=null;this.src=&#39;http://sblig.club/res/images/face/face_small.jpg&#39;" width="50" height="50" alt="极分享">
 												</a>
 											</p>
 											<p class="name">
