动态加载js 路径设置

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         //全局变量 Global Variables
         var GV = {
                     ROOT_DIR: 'http://sblig.club',                                               //网站根目录
-                    JS_ROOT: 'http://sblig.club/res/js/dev/',                                        //js目录
+                    JS_ROOT: 'http://sblig.club/dist/',                                        //js目录
                     JS_VERSION: '20151228',                                             //js版本号(不能带空格)
                     JS_EXTRES: 'http://sblig.club/themes/extres',
                     TOKEN: '93492652a9614c4f', //token $.ajaxSetup data
