--- a/index.html
+++ b/index.html
@@ -427,13 +427,35 @@
                 <div class="fl main_menu" id="dropdown">
                     <ul class="">
                         <li class="open">
+                            <a href="javascript:void(0);" class="dropdown-toggle">
+                                <p style="float:left;width:26px;height:20px;padding-right:10px;margin-top:3px;background:url(dist/img/2.png) no-repeat"></p>
+                                <span>bootstrap 学习系列</span>
+                                <i class="fa fa-angle-right drop-icon"></i>
+                            </a>
+                            <ul class="submenu" style="display: block; height: 570px;">
+                                <li><a href="bootstrap/lean1.html" target="_blank"> 第一天</a></li>
+                                <li><a href="bootstrap/lean2.html" target="_blank"> 第二天</a></li>
+                                <li><a href="bootstrap/lean3.html" target="_blank"> 第三天</a></li>
+                                <li><a href="bootstrap/lean4.html" target="_blank"> 第四天</a></li>
+                                <li><a href="bootstrap/lean5.html" target="_blank"> 第五天</a></li>
+                                <li><a href="bootstrap/lean6.html" target="_blank"> 第六天</a></li>
+                                <li><a href="bootstrap/lean7.html" target="_blank"> 第七天</a></li>
+                                <li><a href="bootstrap/lean8.html" target="_blank"> 第八天</a></li>
+                                <li><a href="bootstrap/lean9.html" target="_blank"> 第九天</a></li>
+                                <li><a href="bootstrap/lean10.html" target="_blank"> 第十天</a></li>
+                                <li><a href="bootstrap/lean11.html" target="_blank"> 第十一天</a></li>
+                                <li><a href="bootstrap/lean12.html" target="_blank"> 第十二天</a></li>
+                                <li><a href="bootstrap/lean13.html" target="_blank"> 第十三天</a></li>
 
+                            </ul>
+                        </li>
+                        <li>
                             <a href="javascript:void(0);" class="dropdown-toggle">
                                 <p style="float:left;width:26px;height:20px;padding-right:10px;margin-top:3px;background:url(dist/img/1.png) no-repeat"></p>
                                 <span>视觉设计</span>
                                 <i class="fa fa-angle-right drop-icon"></i>
                             </a>
-                            <ul class="submenu" style="display: block; height: 132px;">
+                            <ul class="submenu" style="display: block; height:0">
                                 <li>
                                     <a href="http://sblig.club/tag-%E8%AE%BE%E8%AE%A1%E6%A1%88%E4%BE%8B"
                                        target="_blank"> 设计案例</a>
