在线数据库

--- a/bootstrap/lean1.html
+++ b/bootstrap/lean1.html
@@ -19,9 +19,43 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
 </head>
 <body>
+
 <h1>Hello, world!</h1>
+
+<script src = "https://cdn.wilddog.com/js/client/current/wilddog.js" ></script>
+<script type="text/javascript">
+    var ref = new Wilddog("https://sblig.wilddogio.com/samplechat");
+    //写
+    //ref.set({"temp":12,"pm25":500});
+    //更新
+    //ref.update({"temp":10,"pm25":501});
+    //删除,整个节点删除
+    //ref.remove();
+//    var childref = ref.push({"name":"Thor2","planet":"Asgard"});
+//    var newKey = childref.key();
+//    var user = {
+//        name: {
+//            first: 'jack',
+//            last: 'Lee'
+//        }
+//    };
+//    childref.setWithPriority(user,100);
+//    循环遍历
+//    ref.on("value",function(snapshot){
+//
+//        snapshot.forEach(function(snap){
+//
+//            console.log("the",snap.key(),":",snap.val());
+//
+//        });
+//
+//    });
+
+
+</script>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="http://apps.bdimg.com/libs/jquery/1.11.3/jquery.js"></script>
